fix: truncate css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -221,6 +221,7 @@ a:active {
 }
 
 .truncate {
+    text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
 }
